--- a/juego/pom.xml
+++ b/juego/pom.xml
@@ -29,13 +29,19 @@
 	<dependency>
     	<groupId>com.mysql</groupId>
     	<artifactId>mysql-connector-j</artifactId>
-    	<version>9.0.0</version>
+    	<version>8.0.32</version>
 	</dependency>
 	<!-- https://mvnrepository.com/artifact/org.hibernate.orm/hibernate-core -->
 	<dependency>
     	<groupId>org.hibernate.orm</groupId>
     	<artifactId>hibernate-core</artifactId>
     	<version>6.6.0.Final</version>
+	</dependency>
+	<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+	<dependency>
+		<groupId>com.google.code.gson</groupId>
+		<artifactId>gson</artifactId>
+		<version>2.11.0</version>
 	</dependency>
   </dependencies>
     <build>
